# pd-doc-pipeline

./: .env.example  .gitignore  CLAUDE.md  KONTEXT.md  PLAN.md  README.md  SPEC.md  pyproject.toml
docs/: CASE_STUDY.md  IMPLEMENTIERUNGSPLAN.md
scripts/: make_fixtures.py
src/: classify_extract.py  draft.py  extract.py  main.py  models.py  store.py  validate.py
tests/: test_classify_extract.py  test_draft.py  test_erfolgskriterien.py  test_extract.py  test_main.py  test_models.py  test_store.py  test_validate.py
tests/fixtures/: README.md
